@@ -766,12 +766,7 @@ evalUnop (Operator op, Value *value)
 	      error (ErrorError, "Bad operand type for ? operator");
 	      return false;
 	    }
-	  if (gASM_Phase == ePassOne)
-	    {
-	      value->Tag = ValueInt;
-	      value->Data.Int.i = 0;
-	    }
-	  else if (value->Data.Symbol.symbol->type & SYMBOL_DEFINED)
+	  if (value->Data.Symbol.symbol->type & SYMBOL_DEFINED)
 	    {
 	      value->Tag = ValueInt;
 	      value->Data.Int.i = value->Data.Symbol.symbol->codeSize;
